Fix firing of mutation events on buttons.  Bug 288721, r+sr=jst, a=bsmedberg